--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
         </div>
         <div class="col-xs-6 text-center" class="task">
             <div class="row">
-              {{#each burger_data}}
+              {{#each Burger}}
                   {{#unless this.devoured}}
                 <div class="col-xs-9 text-center">
                     <pre>{{this.id}}. {{this.burger_name}}
@@ -14,7 +14,7 @@
                           <!-- {{this.Date}} -->
                 </div>
                 <div class="col-xs-3 text-center">
-                    <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
+                    <form method="DELETE" action="/burgers/delete/:id?_method=DELETE" class="button-size">
                         <input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
                         <button type="submit" class="btn btn-default">Devour it!</button>
                     </form>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="col-xs-6 text-center" class="task">
-              {{#each burger_data}}
+              {{#each Burger}}
                   {{#if this.devoured}}
                       <input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
                 {{/if}}
