--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,8 +14,8 @@
                           <!-- {{this.Date}} -->
                 </div>
                 <div class="col-xs-3 text-center">
-                    <form method="DELETE" action="/burgers/delete/:id?_method=DELETE" class="button-size">
-                        <input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
+                    <form method="POST" action="/api/burgers/:id" class="button-size">
+                        <input input type="hidden" type="text" name="_method" value={{this.id}}><br>
                         <button type="submit" class="btn btn-default">Devour it!</button>
                     </form>
                 </div>
@@ -36,7 +36,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 text-center enter_section">
-            <form action="/burgers/create" method="POST">
+            <form action="api/burgers" method="POST">
                 <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
                 <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
             </form>
